force-app/main/default/objects/Portal_Login_Token__c/Portal_Login_Token__c.object-meta.xml
<CustomObject>
    <description>One-time, short-lived tokens used to hand off a logged-in Salesforce user session to the external Applicant Portal (React app) without requiring the applicant to re-enter credentials.</description>
    <label>Portal Login Token</label>
    <nameField>
        <displayFormat>PLT-{0000}</displayFormat>
        <label>Portal Login Token Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Portal Login Tokens</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>