force-app/main/default/objects/Portal_Login_Token__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Cascade</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Portal Login Tokens</relationshipLabel>
    <relationshipName>Portal_Login_Tokens</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>