force-app/main/default/objects/Portal_Login_Token__c/fields/Proposal__c.field-meta.xml
<CustomField>
    <fullName>Proposal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Proposal</label>
    <referenceTo>Proposal__c</referenceTo>
    <relationshipLabel>Portal Login Tokens</relationshipLabel>
    <relationshipName>Portal_Login_Tokens</relationshipName>
    <type>Lookup</type>
</CustomField>